# minesweeper

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
res/: 9slice.frag.shdr  colored.vert.shdr  default.json  default.wndw  default.xml  draw_texture.vert.shdr  funny_triangle.mesh  indexed_texture.frag.shdr  texture.frag.shdr  vert.shdr
res/minesweeper/: source.psd
res/render/scripts/: default.json
res/shaders/: draw_square.vert  vert.vert
res/spv/: vert.spv
src/: CMakeLists.txt  main.cpp  minesweeper_ncomponent.cpp  minesweeper_ncomponent.h
