cmake_minimum_required (VERSION 3.8)

file(GLOB DEPENDENCIES_DIRECTORIES LIST_DIRECTORIES true *)
file(GLOB DEPENDENCIES_FILES LIST_DIRECTORIES false *)

foreach(DEPENDENCIES_FILE ${DEPENDENCIES_FILES})
    list(REMOVE_ITEM DEPENDENCIES_DIRECTORIES ${DEPENDENCIES_FILE})
endforeach()

set(PROJECT_DEPENDENCIES)

foreach(DEPENDENCY_DIRECTORY ${DEPENDENCIES_DIRECTORIES})
    get_filename_component(DEPENDENCY_PROJECT ${DEPENDENCY_DIRECTORY} NAME)
    list(APPEND PROJECT_DEPENDENCIES ${DEPENDENCY_PROJECT})
    message("Configuring ${DEPENDENCY_PROJECT}...")

    add_subdirectory(${DEPENDENCY_DIRECTORY})

    get_target_property(DEPENDENCY_INCLUDE ${DEPENDENCY_PROJECT} INTERFACE_INCLUDE_DIRECTORIES)
    target_include_directories(${PROJECT_NAME} PUBLIC ${DEPENDENCY_INCLUDE})

    get_target_property(DEPENDENCY_LINK ${DEPENDENCY_PROJECT} INTERFACE_LINK_DIRECTORIES)
    target_link_directories(${PROJECT_NAME} PUBLIC ${DEPENDENCY_LINK})
    target_link_directories(${PROJECT_NAME} PRIVATE "${DEPENDENCY_DIRECTORY}/lib")

    add_dependencies(${PROJECT_NAME} ${DEPENDENCY_PROJECT})
endforeach()

set(PROJECT_DEPENDENCIES "${PROJECT_DEPENDENCIES}" PARENT_SCOPE)